Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/writing-extensions.adoc.po
@@ -761,17 +761,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:373
 msgid "Your extension project should be setup as a multi-module project with two submodules:"
-msgstr ""
+msgstr "エクステンションプロジェクトは、2つのサブモジュールを持つマルチモジュールプロジェクトとして設定する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:375
 msgid "A deployment time submodule that handles the build time processing and bytecode recording."
-msgstr ""
+msgstr "ビルド時の処理やバイトコードの記録を行うデプロイメント時サブモジュール"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:377
 msgid "A runtime submodule that contains the runtime behavior that will provide the extension behavior in the native executable or runtime JVM."
-msgstr ""
+msgstr "ネイティブ実行可能ファイルまたはランタイムJVMでエクステンション動作を提供する実行時動作を含むランタイムサブモジュール"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:379
@@ -1116,7 +1116,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:589
 #, no-wrap
 msgid "Simple build items"
-msgstr ""
+msgstr "シンプルなビルドアイテム"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:595
@@ -1170,7 +1170,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:620
 #, no-wrap
 msgid "Multi build items"
-msgstr ""
+msgstr "マルチビルドアイテム"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:625
@@ -1181,7 +1181,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:626
 #, no-wrap
 msgid "Example of a multiple build item"
-msgstr ""
+msgstr "マルチビルドアイテムの例"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:632
@@ -1336,7 +1336,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:733
 #, no-wrap
 msgid "Empty build items"
-msgstr ""
+msgstr "空のビルドアイテム"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:738
@@ -2746,7 +2746,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:1439
 #, no-wrap
 msgid "Printing step execution time"
-msgstr ""
+msgstr "ステップ実行時間の出力"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:1444
@@ -2774,13 +2774,13 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:1462
 #, no-wrap
 msgid "Contexts and Dependency Injection"
-msgstr ""
+msgstr "コンテキストと依存性インジェクション"
 
 #. type: Title ====
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:1464
 #, no-wrap
 msgid "Extension Points"
-msgstr ""
+msgstr "拡張ポイント"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:1469
@@ -3907,12 +3907,12 @@ msgstr "`pom.xml` にこのプロパティを追加します : `<m2e.apt.activat
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2037
 msgid "If you have the `io.quarkus:quarkus-extension-processor` project open at the same time in your IDE (for example, if you have the Quarkus sources checked out and open in your IDE) you will need to close that project. Otherwise, Eclipse will not invoke the APT plugin that it contains."
-msgstr ""
+msgstr "IDEで同時に `io.quarkus:quarkus-extension-processor` プロジェクトを開いている場合（例えば、QuarkusのソースをチェックアウトしてIDEで開いている場合）、そのプロジェクトを閉じる必要があります。そうしないと、Eclipseはそのプロジェクトに含まれるAPTプラグインを起動しません。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2038
 msgid "If you just closed the extension processor project, be sure to do `Maven > Update Project` on the other projects in order for Eclipse to pick up the extension processor from the Maven repository."
-msgstr ""
+msgstr "エクステンションプロセッサのプロジェクトを閉じたばかりの場合は、Eclipse が Maven リポジトリからエクステンションプロセッサをピックアップするために、他のプロジェクトで `Maven > Update Project` を必ず実行してください。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2039
@@ -3949,12 +3949,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2052
 msgid "These properties are especially useful in the development mode or when running the tests where the generated/transformed classes are only held in memory in a class loader."
-msgstr ""
+msgstr "これらのプロパティは、開発モードやテストの実行時に、生成/変換されたクラスがクラスローダーのメモリ内に保持されているだけの場合に特に有効です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2054
 msgid "For example, you can specify the `quarkus.debug.generated-classes-dir` system property to have these classes written out to disk for inspection in the development mode:"
-msgstr ""
+msgstr "例えば、 `quarkus.debug.generated-classes-dir` システムプロパティを指定すると、これらのクラスがディスクに書き出され、開発モードで検査できるようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2058
@@ -3998,12 +3998,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2079
 #, no-wrap
 msgid "Multi-module Maven Projects and the Development Mode"
-msgstr ""
+msgstr "マルチモジュールのMavenプロジェクトと開発モード"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2084
 msgid "It's not uncommon to develop an extension in a multi-module Maven project that also contains an \"example\" module.  However, if you want to run the example in the development mode then the `-DnoDeps` system property must be used in order to exclude the local project dependencies.  Otherwise, Quarkus attempts to monitor the extension classes and this may result in weird class loading issues."
-msgstr ""
+msgstr "example \"モジュールを含むマルチモジュールのMavenプロジェクトでエクステンションを開発することはよくあります。しかし、開発モードでサンプルを実行する場合は、ローカルプロジェクトの依存関係を除外するために、 `-DnoDeps` システムプロパティを使用する必要があります。そうしないと、Quarkusがエクステンションクラスを監視しようとするため、クラスの読み込みに問題が生じる可能性があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2088
@@ -4031,13 +4031,13 @@ msgstr "サンプルテストエクステンション"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2097
 msgid "We have an extension that is used to test for regressions in the extension processing. It is located in {quarkus-tree-url}/core/test-extension directory. In this section we touch on some of the tasks an extension author will typically need to perform using the test-extension code to illustrate how the task could be done."
-msgstr ""
+msgstr "エクステンションの処理のリグレッションをテストするために使われるエクステンションがあります。これは {quarkus-tre-url}/core/test-extension ディレクトリにあります。このセクションでは、test-extension のコードを使って、エクステンションの作者が通常行う必要のあるタスクについて触れます。"
 
 #. type: Title ====
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2098
 #, no-wrap
 msgid "Features and Capabilities"
-msgstr ""
+msgstr "フィーチャーとケイパビリティ"
 
 #. type: Title =====
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2100
@@ -4048,13 +4048,13 @@ msgstr "特徴"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2104
 msgid "A _feature_ represents a functionality provided by an extension.  The name of the feature gets displayed in the log during application bootstrap."
-msgstr ""
+msgstr "_フィーチャー_ とは、エクステンションが提供する機能のことです。フィーチャーの名前は、アプリケーションの起動時にログに表示されます。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2105
 #, no-wrap
 msgid "Example Startup Lines"
-msgstr ""
+msgstr "起動時の行の例"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2110
@@ -4067,12 +4067,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2112
 msgid "A list of features installed in the runtime image"
-msgstr ""
+msgstr "ランタイムイメージにインストールされているフィーチャーのリスト"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2114
 msgid "A feature can be registered in a <<Build Step Processors>> method that produces a `FeatureBuildItem`:"
-msgstr ""
+msgstr "フィーチャーは、 `FeatureBuildItem` を生成する link:#Build Step Processors[[Build Step Processors]]メソッドで登録することができます。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2115
@@ -4093,7 +4093,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2127
 msgid "The name of the feature should only contain lowercase characters, words are separated by dash; e.g. `security-jpa`.  An extension should provide at most one feature and the name must be unique.  If multiple extensions register a feature of the same name the build fails."
-msgstr ""
+msgstr "フィーチャー名には小文字のみを使用し、単語はダッシュで区切ります。例： `security-jpa` 。1 つのエクステンションが提供するフィーチャーは最大でも 1 つで、その名前は一意でなければなりません。複数のエクステンションが同じ名前のフィーチャーを登録した場合、ビルドは失敗します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2131
@@ -4121,13 +4121,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2150
 msgid "Capabilities can be registered in a <<Build Step Processors>> method that produces a `CapabilityBuildItem`:"
-msgstr ""
+msgstr "ケイパビリティは、 `CapabilityBuildItem` を生成する link:#Build Step Processors[[Build Step Processors]]メソッドで登録することができます。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2151
 #, no-wrap
 msgid "TestProcessor#capability()"
-msgstr ""
+msgstr "TestProcessor#capability()"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2159
@@ -4149,7 +4149,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2163
 #, no-wrap
 msgid "TestProcessor#doSomeCoolStuff()"
-msgstr ""
+msgstr "TestProcessor#doSomeCoolStuff()"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2172
@@ -4687,7 +4687,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2426
 #, no-wrap
 msgid "Observing Container Startup"
-msgstr ""
+msgstr "コンテナの起動を観察"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/writing-extensions.adoc:2431
