--- a/l10n/po/ja_JP/_versions/2.2/guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/cdi-reference.adoc.po
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/cdi-reference.adoc:6
 #, no-wrap
 msgid "Contexts and Dependency Injection"
-msgstr ""
+msgstr "コンテキストと依存性インジェクション"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/cdi-reference.adoc:17
