--- a/l10n/po/ja_JP/_versions/2.2/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/writing-extensions.adoc.po
@@ -782,17 +782,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:379
 msgid "Your extension project should be setup as a multi-module project with two submodules:"
-msgstr ""
+msgstr "エクステンションプロジェクトは、2つのサブモジュールを持つマルチモジュールプロジェクトとして設定する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:381
 msgid "A deployment time submodule that handles the build time processing and bytecode recording."
-msgstr ""
+msgstr "ビルド時の処理やバイトコードの記録を行うデプロイメント時サブモジュール"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:383
 msgid "A runtime submodule that contains the runtime behavior that will provide the extension behavior in the native executable or runtime JVM."
-msgstr ""
+msgstr "ネイティブ実行可能ファイルまたはランタイムJVMでエクステンション動作を提供する実行時動作を含むランタイムサブモジュール"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:385
@@ -1134,7 +1134,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:578
 #, no-wrap
 msgid "Simple build items"
-msgstr ""
+msgstr "シンプルなビルドアイテム"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:584
@@ -1188,7 +1188,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:609
 #, no-wrap
 msgid "Multi build items"
-msgstr ""
+msgstr "マルチビルドアイテム"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:614
@@ -1199,7 +1199,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:615
 #, no-wrap
 msgid "Example of a multiple build item"
-msgstr ""
+msgstr "マルチビルドアイテムの例"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:621
@@ -1354,7 +1354,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:722
 #, no-wrap
 msgid "Empty build items"
-msgstr ""
+msgstr "空のビルドアイテム"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:727
@@ -2779,12 +2779,12 @@ msgstr ""
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1435
 #, no-wrap
 msgid "Printing step execution time"
-msgstr ""
+msgstr "ステップ実行時間の出力"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1440
 msgid "At times, it can be useful to know how the exact time each startup task (which is the result of each bytecode recording) takes when the application is run.  The simplest way to determine this information is to launch the Quarkus application with the `-Dquarkus.debug.print-startup-times=true` system property.  The output will look something like:"
-msgstr ""
+msgstr "時には、アプリケーションを実行したときに、各スタートアップタスク（各バイトコードの記録結果）にかかる正確な時間を知りたい場合があります。この情報を確認する最も簡単な方法は、 `-Dquarkus.debug.print-startup-times=true` システムプロパティを付けてQuarkusアプリケーションを起動することです。出力は以下のようになります:"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1453
@@ -2807,13 +2807,13 @@ msgstr ""
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1458
 #, no-wrap
 msgid "Contexts and Dependency Injection"
-msgstr ""
+msgstr "コンテキストと依存性インジェクション"
 
 #. type: Title ====
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1460
 #, no-wrap
 msgid "Extension Points"
-msgstr ""
+msgstr "拡張ポイント"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1465
@@ -2824,7 +2824,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1466
 #, no-wrap
 msgid "Quarkus Dev UI"
-msgstr ""
+msgstr "Quarkus Dev UI"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1469
@@ -2835,17 +2835,17 @@ msgstr ""
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1470
 #, no-wrap
 msgid "Extension-defined endpoints"
-msgstr ""
+msgstr "エクステンションで定義されたエンドポイント"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1474
 msgid "Your extension can add additional, non-application endpoints to be served alongside endpoints for Health, Metrics, OpenAPI, Swagger UI, etc."
-msgstr ""
+msgstr "エクステンションは、Health、Metrics、OpenAPI、Swagger UIなどのエンドポイントと一緒に提供される、アプリケーション以外のエンドポイントを追加することができます。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1476
 msgid "Use a `NonApplicationRootPathBuildItem` to define an endpoint:"
-msgstr ""
+msgstr "`NonApplicationRootPathBuildItem` を使用して、エンドポイントを定義します:"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1487
@@ -2864,7 +2864,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1492
 msgid "Note that the path above does not start with a '/', indicating it is a relative path. The above endpoint will be served relative to the configured non-application endpoint root. The non-application endpoint root is `/q` by default, which means the resulting endpoint will be found at `/q/custom-endpoint`."
-msgstr ""
+msgstr "上記のパスが「/」で始まっていないのは、相対パスであることを示しています。上記のエンドポイントは、設定されたノンアプリケーションエンドポイントのルートからの相対パスで提供されます。アプリケーション以外のエンドポイントのルートは、デフォルトでは `/q` となっており、結果的にエンドポイントは `/q/custom-endpoint` にあることになります。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1495
@@ -2874,7 +2874,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1497
 msgid "If an extension needs nested non-application endpoints:"
-msgstr ""
+msgstr "エクステンションがネストした非アプリケーションのエンドポイントを必要とする場合:"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:1508
@@ -4085,12 +4085,12 @@ msgstr "`pom.xml` にこのプロパティを追加します : `<m2e.apt.activat
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2115
 msgid "If you have the `io.quarkus:quarkus-extension-processor` project open at the same time in your IDE (for example, if you have the Quarkus sources checked out and open in your IDE) you will need to close that project. Otherwise, Eclipse will not invoke the APT plugin that it contains."
-msgstr ""
+msgstr "IDEで同時に `io.quarkus:quarkus-extension-processor` プロジェクトを開いている場合（例えば、QuarkusのソースをチェックアウトしてIDEで開いている場合）、そのプロジェクトを閉じる必要があります。そうしないと、Eclipseはそのプロジェクトに含まれるAPTプラグインを起動しません。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2116
 msgid "If you just closed the extension processor project, be sure to do `Maven > Update Project` on the other projects in order for Eclipse to pick up the extension processor from the Maven repository."
-msgstr ""
+msgstr "エクステンションプロセッサのプロジェクトを閉じたばかりの場合は、Eclipse が Maven リポジトリからエクステンションプロセッサをピックアップするために、他のプロジェクトで `Maven > Update Project` を必ず実行してください。"
 
 #. type: Title ===
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2117
@@ -4103,27 +4103,27 @@ msgstr "トラブルシューティング / デバッグのヒント"
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2121
 #, no-wrap
 msgid "Inspecting the Generated/Transformed Classes"
-msgstr ""
+msgstr "生成・変換されたクラスの検査"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2125
 msgid "Quarkus generates a lot of classes during the build phase and in many cases also transforms existing classes.  It is often extremely useful to see the generated bytecode and transformed classes during the development of an extension."
-msgstr ""
+msgstr "Quarkusでは、ビルドフェーズで多くのクラスが生成され、多くの場合、既存のクラスも変換されます。エクステンションの開発中に、生成されたバイトコードや変換されたクラスを見ることができるのは、非常に便利なことです。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2127
 msgid "If you set the `quarkus.package.fernflower.enabled` property to `true` then Quarkus will download and invoke the https://github.com/JetBrains/intellij-community/tree/master/plugins/java-decompiler/engine[Fernflower decompiler] and dump the result in the `decompiled` directory of the build tool output (`target/decompiled` for Maven for example)."
-msgstr ""
+msgstr "`quarkus.package.fernflower.enabled` プロパティを `true` に設定すると、Quarkusは link:https://github.com/JetBrains/intellij-community/tree/master/plugins/java-decompiler/engine[Fernflowerのデコンパイラ]をダウンロードして起動し、その結果をビルドツールの出力の `decompiled` ディレクトリにダンプします（例えば、Mavenの場合は `target/decompiled` ）。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2129
 msgid "This property only works during a normal production build (i.e. not for dev mode/tests) and when `fast-jar` packaging type is used (the default behavior)."
-msgstr ""
+msgstr "このプロパティは、通常のプロダクションビルド時にのみ機能します（つまり、devモード/テストでは機能しません）。また、 `fast-jar` パッケージングタイプが使用されている場合（デフォルトの動作）には、このプロパティは機能しません。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2131
 msgid "There are also three system properties that allow you to dump the generated/transformed classes to the filesystem and inspect them later, for example via a decompiler in your IDE."
-msgstr ""
+msgstr "また、生成/変換されたクラスをファイルシステムにダンプして、IDEのデコンパイラなどで後から検査することができる3つのシステム・プロパティがあります。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2133
@@ -4143,12 +4143,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2137
 msgid "These properties are especially useful in the development mode or when running the tests where the generated/transformed classes are only held in memory in a class loader."
-msgstr ""
+msgstr "これらのプロパティは、開発モードやテストの実行時に、生成/変換されたクラスがクラスローダーのメモリ内に保持されているだけの場合に特に有効です。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2139
 msgid "For example, you can specify the `quarkus.debug.generated-classes-dir` system property to have these classes written out to disk for inspection in the development mode:"
-msgstr ""
+msgstr "例えば、 `quarkus.debug.generated-classes-dir` システムプロパティを指定すると、これらのクラスがディスクに書き出され、開発モードで検査できるようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2143
@@ -4192,12 +4192,12 @@ msgstr ""
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2163
 #, no-wrap
 msgid "Multi-module Maven Projects and the Development Mode"
-msgstr ""
+msgstr "マルチモジュールのMavenプロジェクトと開発モード"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2168
 msgid "It's not uncommon to develop an extension in a multi-module Maven project that also contains an \"example\" module.  However, if you want to run the example in the development mode then the `-DnoDeps` system property must be used in order to exclude the local project dependencies.  Otherwise, Quarkus attempts to monitor the extension classes and this may result in weird class loading issues."
-msgstr ""
+msgstr "example \"モジュールを含むマルチモジュールのMavenプロジェクトでエクステンションを開発することはよくあります。しかし、開発モードでサンプルを実行する場合は、ローカルプロジェクトの依存関係を除外するために、 `-DnoDeps` システムプロパティを使用する必要があります。そうしないと、Quarkusがエクステンションクラスを監視しようとするため、クラスの読み込みに問題が生じる可能性があります。"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2172
@@ -4225,13 +4225,13 @@ msgstr "サンプルテストエクステンション"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2181
 msgid "We have an extension that is used to test for regressions in the extension processing. It is located in {quarkus-tree-url}/core/test-extension directory. In this section we touch on some of the tasks an extension author will typically need to perform using the test-extension code to illustrate how the task could be done."
-msgstr ""
+msgstr "エクステンションの処理のリグレッションをテストするために使われるエクステンションがあります。これは {quarkus-tre-url}/core/test-extension ディレクトリにあります。このセクションでは、test-extension のコードを使って、エクステンションの作者が通常行う必要のあるタスクについて触れます。"
 
 #. type: Title ====
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2182
 #, no-wrap
 msgid "Features and Capabilities"
-msgstr ""
+msgstr "フィーチャーとケイパビリティ"
 
 #. type: Title =====
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2184
@@ -4242,13 +4242,13 @@ msgstr "特徴"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2188
 msgid "A _feature_ represents a functionality provided by an extension.  The name of the feature gets displayed in the log during application bootstrap."
-msgstr ""
+msgstr "_フィーチャー_ とは、エクステンションが提供する機能のことです。フィーチャーの名前は、アプリケーションの起動時にログに表示されます。"
 
 #. type: Block title
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2189
 #, no-wrap
 msgid "Example Startup Lines"
-msgstr ""
+msgstr "起動時の行の例"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2194
@@ -4261,12 +4261,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2196
 msgid "A list of features installed in the runtime image"
-msgstr ""
+msgstr "ランタイムイメージにインストールされているフィーチャーのリスト"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2198
 msgid "A feature can be registered in a <<Build Step Processors>> method that produces a `FeatureBuildItem`:"
-msgstr ""
+msgstr "フィーチャーは、 `FeatureBuildItem` を生成する link:#Build Step Processors[[Build Step Processors]]メソッドで登録することができます。"
 
 #. type: Block title
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2199
@@ -4287,7 +4287,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2211
 msgid "The name of the feature should only contain lowercase characters, words are separated by dash; e.g. `security-jpa`.  An extension should provide at most one feature and the name must be unique.  If multiple extensions register a feature of the same name the build fails."
-msgstr ""
+msgstr "フィーチャー名には小文字のみを使用し、単語はダッシュで区切ります。例： `security-jpa` 。1 つのエクステンションが提供するフィーチャーは最大でも 1 つで、その名前は一意でなければなりません。複数のエクステンションが同じ名前のフィーチャーを登録した場合、ビルドは失敗します。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2215
@@ -4316,18 +4316,18 @@ msgstr "Capabilities"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2233
 msgid "A _capability_ represents a technical capability that can be queried by other extensions.  An extension may provide multiple capabilities and multiple extensions can provide the same capability.  By default, capabilities are not displayed to users.  Capabilities should be used when checking for the presence of an extension rather than class path based checks."
-msgstr ""
+msgstr "_ケイパビリティ_ は、他のエクステンションから問い合わせ可能な技術的能力を表します。1つのエクステンションが複数のケイパビリティを提供することも、複数のエクステンションが同じケイパビリティを提供することもできます。デフォルトでは、ケイパビリティはユーザーに表示されません。エクステンションの存在を確認する際には、クラスパスベースのチェックではなく、ケイパビリティを使用する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2235
 msgid "Capabilities can be registered in a <<Build Step Processors>> method that produces a `CapabilityBuildItem`:"
-msgstr ""
+msgstr "ケイパビリティは、 `CapabilityBuildItem` を生成する link:#Build Step Processors[[Build Step Processors]]メソッドで登録することができます。"
 
 #. type: Block title
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2236
 #, no-wrap
 msgid "TestProcessor#capability()"
-msgstr ""
+msgstr "TestProcessor#capability()"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2244
@@ -4349,7 +4349,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2248
 #, no-wrap
 msgid "TestProcessor#doSomeCoolStuff()"
-msgstr ""
+msgstr "TestProcessor#doSomeCoolStuff()"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2257
@@ -4887,7 +4887,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2511
 #, no-wrap
 msgid "Observing Container Startup"
-msgstr ""
+msgstr "コンテナの起動を観察"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:2516
@@ -5875,4 +5875,4 @@ msgstr "エクステンションの継続的なテスト"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/writing-extensions.adoc:3083
 msgid "In order to make it easy for extension authors to test their extensions daily against the latest snapshot of Quarkus, Quarkus has introduced the notion of Ecosystem CI. The Ecosystem CI link:https://github.com/quarkusio/quarkus-ecosystem-ci/blob/main/README.adoc[README] has all the details on how to set up a GitHub Actions job to take advantage of this capability, while this link:https://www.youtube.com/watch?v=VpbRA1n0hHQ[video] provides an overview of what the process looks like."
-msgstr ""
+msgstr "エクステンションの作者が、Quarkusの最新のスナップショットに対して自分の拡張機能を毎日簡単にテストできるようにするために、QuarkusはEcosystem CIという概念を導入しました。Ecosystem CIの link:https://github.com/quarkusio/quarkus-ecosystem-ci/blob/main/README.adoc[README]には、この機能を利用するためにGitHub Actionsジョブをセットアップする方法の詳細が記載されており、この link:https://www.youtube.com/watch?v=VpbRA1n0hHQ[ビデオ]ではそのプロセスの概要を説明しています。"
