--- a/l10n/po/ja_JP/_versions/1.11/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/writing-extensions.adoc.po
@@ -771,17 +771,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:375
 msgid "Your extension project should be setup as a multi-module project with two submodules:"
-msgstr ""
+msgstr "エクステンションプロジェクトは、2つのサブモジュールを持つマルチモジュールプロジェクトとして設定する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:377
 msgid "A deployment time submodule that handles the build time processing and bytecode recording."
-msgstr ""
+msgstr "ビルド時の処理やバイトコードの記録を行うデプロイメント時サブモジュール"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:379
 msgid "A runtime submodule that contains the runtime behavior that will provide the extension behavior in the native executable or runtime JVM."
-msgstr ""
+msgstr "ネイティブ実行可能ファイルまたはランタイムJVMでエクステンション動作を提供する実行時動作を含むランタイムサブモジュール"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:381
@@ -1125,7 +1125,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:590
 #, no-wrap
 msgid "Simple build items"
-msgstr ""
+msgstr "シンプルなビルドアイテム"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:596
@@ -1179,7 +1179,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:621
 #, no-wrap
 msgid "Multi build items"
-msgstr ""
+msgstr "マルチビルドアイテム"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:626
@@ -1190,7 +1190,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:627
 #, no-wrap
 msgid "Example of a multiple build item"
-msgstr ""
+msgstr "マルチビルドアイテムの例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:633
@@ -1345,7 +1345,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:734
 #, no-wrap
 msgid "Empty build items"
-msgstr ""
+msgstr "空のビルドアイテム"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:739
@@ -2759,12 +2759,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:1441
 #, no-wrap
 msgid "Printing step execution time"
-msgstr ""
+msgstr "ステップ実行時間の出力"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:1446
 msgid "At times, it can be useful to know how the exact time each startup task (which is the result of each bytecode recording) takes when the application is run.  The simplest way to determine this information is to launch the Quarkus application with the `-Dquarkus.debug.print-startup-times=true` system property.  The output will look something like:"
-msgstr ""
+msgstr "時には、アプリケーションを実行したときに、各スタートアップタスク（各バイトコードの記録結果）にかかる正確な時間を知りたい場合があります。この情報を確認する最も簡単な方法は、 `-Dquarkus.debug.print-startup-times=true` システムプロパティを付けてQuarkusアプリケーションを起動することです。出力は以下のようになります:"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:1459
@@ -2787,13 +2787,13 @@ msgstr ""
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:1464
 #, no-wrap
 msgid "Contexts and Dependency Injection"
-msgstr ""
+msgstr "コンテキストと依存性インジェクション"
 
 #. type: Title ====
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:1466
 #, no-wrap
 msgid "Extension Points"
-msgstr ""
+msgstr "拡張ポイント"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:1471
@@ -2815,17 +2815,17 @@ msgstr ""
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:1476
 #, no-wrap
 msgid "Extension-defined endpoints"
-msgstr ""
+msgstr "エクステンションで定義されたエンドポイント"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:1480
 msgid "Your extension can add additional, non-application endpoints to be served alongside endpoints for Health, Metrics, OpenAPI, Swagger UI, etc."
-msgstr ""
+msgstr "エクステンションは、Health、Metrics、OpenAPI、Swagger UIなどのエンドポイントと一緒に提供される、アプリケーション以外のエンドポイントを追加することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:1482
 msgid "Use a `NonApplicationRootPathBuildItem` to define an endpoint:"
-msgstr ""
+msgstr "`NonApplicationRootPathBuildItem` を使用して、エンドポイントを定義します:"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:1493
@@ -2844,7 +2844,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:1498
 msgid "Note that the path above does not start with a '/', indicating it is a relative path. The above endpoint will be served relative to the configured non-application endpoint root. The non-application endpoint root is `/q` by default, which means the resulting endpoint will be found at `/q/custom-endpoint`."
-msgstr ""
+msgstr "上記のパスが「/」で始まっていないのは、相対パスであることを示しています。上記のエンドポイントは、設定されたノンアプリケーションエンドポイントのルートからの相対パスで提供されます。アプリケーション以外のエンドポイントのルートは、デフォルトでは `/q` となっており、結果的にエンドポイントは `/q/custom-endpoint` にあることになります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:1501
@@ -2854,7 +2854,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:1503
 msgid "If an extension needs nested non-application endpoints:"
-msgstr ""
+msgstr "エクステンションがネストした非アプリケーションのエンドポイントを必要とする場合:"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:1514
@@ -4012,12 +4012,12 @@ msgstr "`pom.xml` にこのプロパティを追加します : `<m2e.apt.activat
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2097
 msgid "If you have the `io.quarkus:quarkus-extension-processor` project open at the same time in your IDE (for example, if you have the Quarkus sources checked out and open in your IDE) you will need to close that project. Otherwise, Eclipse will not invoke the APT plugin that it contains."
-msgstr ""
+msgstr "IDEで同時に `io.quarkus:quarkus-extension-processor` プロジェクトを開いている場合（例えば、QuarkusのソースをチェックアウトしてIDEで開いている場合）、そのプロジェクトを閉じる必要があります。そうしないと、Eclipseはそのプロジェクトに含まれるAPTプラグインを起動しません。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2098
 msgid "If you just closed the extension processor project, be sure to do `Maven > Update Project` on the other projects in order for Eclipse to pick up the extension processor from the Maven repository."
-msgstr ""
+msgstr "エクステンションプロセッサのプロジェクトを閉じたばかりの場合は、Eclipse が Maven リポジトリからエクステンションプロセッサをピックアップするために、他のプロジェクトで `Maven > Update Project` を必ず実行してください。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2099
@@ -4054,12 +4054,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2112
 msgid "These properties are especially useful in the development mode or when running the tests where the generated/transformed classes are only held in memory in a class loader."
-msgstr ""
+msgstr "これらのプロパティは、開発モードやテストの実行時に、生成/変換されたクラスがクラスローダーのメモリ内に保持されているだけの場合に特に有効です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2114
 msgid "For example, you can specify the `quarkus.debug.generated-classes-dir` system property to have these classes written out to disk for inspection in the development mode:"
-msgstr ""
+msgstr "例えば、 `quarkus.debug.generated-classes-dir` システムプロパティを指定すると、これらのクラスがディスクに書き出され、開発モードで検査できるようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2118
@@ -4103,12 +4103,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2139
 #, no-wrap
 msgid "Multi-module Maven Projects and the Development Mode"
-msgstr ""
+msgstr "マルチモジュールのMavenプロジェクトと開発モード"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2144
 msgid "It's not uncommon to develop an extension in a multi-module Maven project that also contains an \"example\" module.  However, if you want to run the example in the development mode then the `-DnoDeps` system property must be used in order to exclude the local project dependencies.  Otherwise, Quarkus attempts to monitor the extension classes and this may result in weird class loading issues."
-msgstr ""
+msgstr "example \"モジュールを含むマルチモジュールのMavenプロジェクトでエクステンションを開発することはよくあります。しかし、開発モードでサンプルを実行する場合は、ローカルプロジェクトの依存関係を除外するために、 `-DnoDeps` システムプロパティを使用する必要があります。そうしないと、Quarkusがエクステンションクラスを監視しようとするため、クラスの読み込みに問題が生じる可能性があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2148
@@ -4136,13 +4136,13 @@ msgstr "サンプルテストエクステンション"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2157
 msgid "We have an extension that is used to test for regressions in the extension processing. It is located in {quarkus-tree-url}/core/test-extension directory. In this section we touch on some of the tasks an extension author will typically need to perform using the test-extension code to illustrate how the task could be done."
-msgstr ""
+msgstr "エクステンションの処理のリグレッションをテストするために使われるエクステンションがあります。これは {quarkus-tre-url}/core/test-extension ディレクトリにあります。このセクションでは、test-extension のコードを使って、エクステンションの作者が通常行う必要のあるタスクについて触れます。"
 
 #. type: Title ====
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2158
 #, no-wrap
 msgid "Features and Capabilities"
-msgstr ""
+msgstr "フィーチャーとケイパビリティ"
 
 #. type: Title =====
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2160
@@ -4153,13 +4153,13 @@ msgstr "特徴"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2164
 msgid "A _feature_ represents a functionality provided by an extension.  The name of the feature gets displayed in the log during application bootstrap."
-msgstr ""
+msgstr "_フィーチャー_ とは、エクステンションが提供する機能のことです。フィーチャーの名前は、アプリケーションの起動時にログに表示されます。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2165
 #, no-wrap
 msgid "Example Startup Lines"
-msgstr ""
+msgstr "起動時の行の例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2170
@@ -4172,12 +4172,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2172
 msgid "A list of features installed in the runtime image"
-msgstr ""
+msgstr "ランタイムイメージにインストールされているフィーチャーのリスト"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2174
 msgid "A feature can be registered in a <<Build Step Processors>> method that produces a `FeatureBuildItem`:"
-msgstr ""
+msgstr "フィーチャーは、 `FeatureBuildItem` を生成する link:#Build Step Processors[[Build Step Processors]]メソッドで登録することができます。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2175
@@ -4198,7 +4198,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2187
 msgid "The name of the feature should only contain lowercase characters, words are separated by dash; e.g. `security-jpa`.  An extension should provide at most one feature and the name must be unique.  If multiple extensions register a feature of the same name the build fails."
-msgstr ""
+msgstr "フィーチャー名には小文字のみを使用し、単語はダッシュで区切ります。例： `security-jpa` 。1 つのエクステンションが提供するフィーチャーは最大でも 1 つで、その名前は一意でなければなりません。複数のエクステンションが同じ名前のフィーチャーを登録した場合、ビルドは失敗します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2191
@@ -4227,18 +4227,18 @@ msgstr "Capabilities"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2209
 msgid "A _capability_ represents a technical capability that can be queried by other extensions.  An extension may provide multiple capabilities and multiple extensions can provide the same capability.  By default, capabilities are not displayed to users.  Capabilities should be used when checking for the presence of an extension rather than class path based checks."
-msgstr ""
+msgstr "_ケイパビリティ_ は、他のエクステンションから問い合わせ可能な技術的能力を表します。1つのエクステンションが複数のケイパビリティを提供することも、複数のエクステンションが同じケイパビリティを提供することもできます。デフォルトでは、ケイパビリティはユーザーに表示されません。エクステンションの存在を確認する際には、クラスパスベースのチェックではなく、ケイパビリティを使用する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2211
 msgid "Capabilities can be registered in a <<Build Step Processors>> method that produces a `CapabilityBuildItem`:"
-msgstr ""
+msgstr "ケイパビリティは、 `CapabilityBuildItem` を生成する link:#Build Step Processors[[Build Step Processors]]メソッドで登録することができます。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2212
 #, no-wrap
 msgid "TestProcessor#capability()"
-msgstr ""
+msgstr "TestProcessor#capability()"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2220
@@ -4260,7 +4260,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2224
 #, no-wrap
 msgid "TestProcessor#doSomeCoolStuff()"
-msgstr ""
+msgstr "TestProcessor#doSomeCoolStuff()"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2233
@@ -4798,7 +4798,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2487
 #, no-wrap
 msgid "Observing Container Startup"
-msgstr ""
+msgstr "コンテナの起動を観察"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/writing-extensions.adoc:2492
