--- a/l10n/po/ja_JP/_guides/vertx-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/vertx-reference.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-04-12 10:10+0000\n"
-"PO-Revision-Date: 2022-04-12 14:20+0900\n"
+"PO-Revision-Date: 2022-05-04 17:43+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -413,9 +413,8 @@ msgstr "使用例"
 
 #. type: Plain text
 #: upstream/_guides/vertx-reference.adoc:146
-#, fuzzy
 msgid "This section gives an example using the Vert.x `WebClient` in the context of a RESTEasy Reactive application.  As indicated in the table above, add the following dependency to your project:"
-msgstr "このセクションでは、Vert.x `WebClient` を使った例を紹介します。上の表にあるように、プロジェクトに以下の依存関係を追加します。"
+msgstr "このセクションでは、RESTEasy Reactiveアプリケーションの文脈でVert.x `WebClient` を使った例を紹介します。上の表にあるように、プロジェクトに以下の依存関係を追加します。"
 
 #. type: Block title
 #: upstream/_guides/vertx-reference.adoc:148
